--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+<div class="parte01">
     <h1> Aula de Revisão </h1>
+    <h3> Colégio Emilio</h3>
+</div>
+<div class="parte02">
     <h2> Teste da Trilha</h2>
-
+    <h4> 2 Ano turma D</h4>
+</div>
 </body>
 </html>
